Almost finished with the layout html

--- a/index.html
+++ b/index.html
@@ -4,13 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harry</title>
+    <link rel="icon" type="image/x-icon" href="./images/logo.png">
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <header>
-
+        <img class="logo" src="./images/logo.png" alt="a picture of Harry">
+        <ul>
+            <li><a href="#">About Harry</a></li>
+            <li><a href="#">Food</a></li>
+            <li><a href="#">Hobby</a></li>
+            <li><a href="#">Give Harry a Treat</a></li>
+        </ul>
     </header>
 
+    <div class="intro">
+        <div>
+            <h1>This website is about Harry</h1>
+            <p>This website is created for other to know more about Harry</p>
+            <button><a href="https://www.youtube.com/watch?v=QH2-TGUlwu4&t=50s" target="_blank">Give Harry a Treat</a></button>
+        </div>
+        <img class="header_img" src="./images/header.jpeg" alt="a picture of Harry staring at you">
+    </div>
+
+    <div class="random_info">
+        <div><h2>Some random facts about Harry</h2></div>
+        <div class="cards">
+            <img src="./images/1.jpeg" alt="Harry being lifted">
+            <div class="text">Harry is actually 19 years old in human years!</div>
+        </div>
+        <div class="cards">
+            <img src="./images/2.jpeg" alt="Harry being stretched the eyes">
+            <div class="text">Harry is actually 19 years old in human years!</div>
+        </div>
+        <div class="cards">
+            <img src="./images/3.jpeg" alt="Harry squinting">
+            <div class="text">Harry is actually 19 years old in human years!</div>
+        </div>
+        <div class="cards">
+            <img src="./images/4.jpeg" alt="Harry reaching for help">
+            <div class="text">Harry is actually 19 years old in human years!</div>
+        </div>
+    </div>
+
+    <div class="quote">
+
+    </div>
+
+    <div class="donate">
+
+    </div>
+    
     <footer>
 
     </footer>
