Finished html layout for landing page

--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
         <div>
             <h1>This website is about Harry</h1>
             <p>This website is created for other to know more about Harry</p>
-            <button><a href="https://www.youtube.com/watch?v=QH2-TGUlwu4&t=50s" target="_blank">Give Harry a Treat</a></button>
+            <a href="https://www.youtube.com/watch?v=_is2was2HqA&list=RD_is2was2HqA&start_radio=1" target="_blank"><button>Give Harry a Treat</button></a>
         </div>
         <img class="header_img" src="./images/header.jpeg" alt="a picture of Harry staring at you">
     </div>
 
     <div class="random_info">
-        <div><h2>Some random facts about Harry</h2></div>
+        <div>
+            <h2>Some random facts about Harry</h2>
+        </div>
         <div class="cards">
             <img src="./images/1.jpeg" alt="Harry being lifted">
             <div class="text">Harry is actually 19 years old in human years!</div>
@@ -48,15 +50,29 @@
     </div>
 
     <div class="quote">
-
+        <div>
+            Meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow
+            meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow!
+        </div>
+        <div>
+            - Harry
+        </div>
     </div>
 
     <div class="donate">
-
+        <div class="donate_info">
+            <div>Would you like to see more pictures of Harry?</div>
+            <div>Donate to give Harry a treat so he can pose!</div>
+        </div>
+        <div>
+            <a href="https://www.youtube.com/watch?v=_is2was2HqA&list=RD_is2was2HqA&start_radio=1" target="_blank"><button>Donate</button></a>
+        </div>
     </div>
     
     <footer>
-
+        <div>
+            Copyright © Harry the Judging cat 2023
+        </div>
     </footer>
 </body>
 </html>
