--- a/index.html
+++ b/index.html
@@ -8,23 +8,26 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <header>
-        <img class="logo" src="./images/logo.png" alt="a picture of Harry">
-        <ul>
-            <li><a href="#">About Harry</a></li>
-            <li><a href="#">Food</a></li>
-            <li><a href="#">Hobby</a></li>
-            <li><a href="#">Give Harry a Treat</a></li>
-        </ul>
-    </header>
+    <div class="blue_background">
+        <header>
+            <img class="logo" src="./images/logo.png" alt="a picture of Harry">
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=SKUlt_c_ouw&list=RD_is2was2HqA&index=3" target="_blank">About Harry</a></li>
+                <li><a href="https://www.youtube.com/watch?v=SKUlt_c_ouw&list=RD_is2was2HqA&index=3" target="_blank">Food</a></li>
+                <li><a href="https://www.youtube.com/watch?v=SKUlt_c_ouw&list=RD_is2was2HqA&index=3" target="_blank">Hobby</a></li>
+                <li><a href="https://www.youtube.com/watch?v=SKUlt_c_ouw&list=RD_is2was2HqA&index=3" target="_blank">Give Harry a Treat</a></li>
+            </ul>
+        </header>
 
-    <div class="intro">
-        <div>
-            <h1>This website is about Harry</h1>
-            <p>This website is created for other to know more about Harry</p>
-            <a href="https://www.youtube.com/watch?v=_is2was2HqA&list=RD_is2was2HqA&start_radio=1" target="_blank"><button>Give Harry a Treat</button></a>
+        <div class="intro">
+            <div class="texts">
+                <div id="head">This website is about Harry</div>
+                <div id="des">This website is created for other to know more about Harry</div>
+                <a href="https://www.youtube.com/watch?v=_is2was2HqA&list=RD_is2was2HqA&start_radio=1" target="_blank"><button>Give Harry a Treat</button></a>
+            </div>
+            <img class="header_img" src="./images/header.jpeg" alt="a picture of Harry staring at you">
         </div>
-        <img class="header_img" src="./images/header.jpeg" alt="a picture of Harry staring at you">
+
     </div>
 
     <div class="random_info">
