Finished random info section

--- a/index.html
+++ b/index.html
@@ -31,24 +31,27 @@
     </div>
 
     <div class="random_info">
-        <div>
-            <h2>Some random facts about Harry</h2>
+        <div class="random_facts">
+            <div>Some random facts about Harry</div>
         </div>
+
         <div class="cards">
-            <img src="./images/1.jpeg" alt="Harry being lifted">
-            <div class="text">Harry is actually 19 years old in human years!</div>
-        </div>
-        <div class="cards">
-            <img src="./images/2.jpeg" alt="Harry being stretched the eyes">
-            <div class="text">Harry is actually 19 years old in human years!</div>
-        </div>
-        <div class="cards">
-            <img src="./images/3.jpeg" alt="Harry squinting">
-            <div class="text">Harry is actually 19 years old in human years!</div>
-        </div>
-        <div class="cards">
-            <img src="./images/4.jpeg" alt="Harry reaching for help">
-            <div class="text">Harry is actually 19 years old in human years!</div>
+            <div class="card">
+                <img src="./images/1.jpeg" alt="Harry being lifted">
+                <div class="text">Harry is actually 19 years old in human years!</div>
+            </div>
+            <div class="card">
+                <img src="./images/2.jpeg" alt="Harry being stretched the eyes">
+                <div class="text">He is a ragdoll.</div>
+            </div>
+            <div class="card">
+                <img src="./images/3.jpeg" alt="Harry squinting">
+                <div class="text">He loves to eat mousse pate.</div>
+            </div>
+            <div class="card">
+                <img src="./images/4.jpeg" alt="Harry reaching for help">
+                <div class="text">He likes to drink water at night.</div>
+            </div>
         </div>
     </div>
 
