Finished quote section

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
     </div>
 
     <div class="quote">
-        <div>
+        <div class="meow">
             Meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow
             meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow!
         </div>
-        <div>
+        <div class="author">
             - Harry
         </div>
     </div>
