Finished donate section

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 
     <div class="donate">
         <div class="donate_info">
-            <div>Would you like to see more pictures of Harry?</div>
-            <div>Donate to give Harry a treat so he can pose!</div>
+            <div class="des_1">Would you like to see more pictures of Harry?</div>
+            <div class="des_2">Donate to give Harry a treat so he can pose!</div>
         </div>
-        <div>
+        <div class="donate_button">
             <a href="https://www.youtube.com/watch?v=_is2was2HqA&list=RD_is2was2HqA&start_radio=1" target="_blank"><button>Donate</button></a>
         </div>
     </div>
